bindings/php/revault_ffi.h

typedef unsigned char bool;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef unsigned long uint64_t;
typedef unsigned long size_t;
typedef struct { uint8_t *ptr; size_t len; } RevaultBuffer;
RevaultBuffer vault_key_decode_crockford(const char *code, size_t len);
RevaultBuffer vault_key_hex_encode(const uint8_t *bytes, size_t len);
RevaultBuffer vault_key_hex_decode(const char *text, size_t len);
void *vault_directory_open(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
uint32_t vault_structure_version_current(void);
uint32_t vault_directory_probe_structure_version(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
void *vault_directory_open_or_create_default(const uint8_t *password, size_t password_len);
void *vault_directory_replace_default(const uint8_t *password, size_t password_len);
bool vault_directory_change_password(const char *root, size_t root_len, const uint8_t *old_password, size_t old_len, const uint8_t *new_password, size_t new_len);
bool vault_directory_change_default_password(const uint8_t *old_password, size_t old_len, const uint8_t *new_password, size_t new_len);
void *vault_directory_replace(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
void *vault_directory_open_or_create(const char *root, size_t root_len, const uint8_t *password, size_t password_len);
RevaultBuffer vault_directory_root(const void *handle);
uint32_t vault_directory_structure_version(const void *handle);
RevaultBuffer vault_directory_list_private_keys(const void *handle);
RevaultBuffer vault_directory_list_private_key_names(const void *handle);
RevaultBuffer vault_directory_list_contact_names(const void *handle);
RevaultBuffer vault_directory_list_form_aliases(const void *handle);
bool vault_directory_private_key_exists(const void *handle, const char *name, size_t name_len);
bool vault_directory_delete_private_key(const void *handle, const char *name, size_t name_len);
bool vault_directory_store_private_key(const void *handle, const char *name, size_t name_len, const void *key);
void *vault_directory_load_private_key(const void *handle, const char *name, size_t name_len);
void *vault_directory_load_private_key_generation(const void *handle, const char *name, size_t name_len, uint16_t index);
bool vault_directory_store_contact(const void *handle, const char *name, size_t name_len, const void *key);
void *vault_directory_load_contact(const void *handle, const char *name, size_t name_len);
bool vault_directory_contact_exists(const void *handle, const char *name, size_t name_len);
bool vault_directory_delete_contact(const void *handle, const char *name, size_t name_len);
RevaultBuffer vault_directory_list_contacts(const void *handle);
bool vault_directory_store_profile_email(const void *handle, const char *name, size_t name_len, const char *email, size_t email_len);
RevaultBuffer vault_directory_profile_email(const void *handle, const char *name, size_t name_len);
bool vault_directory_store_backup(const void *handle, const uint8_t *id, size_t id_len, const uint8_t *bytes, size_t len);
RevaultBuffer vault_directory_load_backup(const void *handle, const uint8_t *id, size_t id_len);
uint64_t vault_directory_backup_count(const void *handle);
bool vault_directory_restore_private_key(const void *handle, const char *name, size_t name_len, const void *key, const void *signing_key, bool overwrite);
void *vault_directory_load_owner_signing_key(const void *handle, const char *name, size_t name_len);
void *vault_directory_load_owner_signing_key_generation(const void *handle, const char *name, size_t name_len, uint16_t index);
bool vault_directory_store_contact_signing_key(const void *handle, const char *name, size_t name_len, const void *key);
void *vault_directory_load_contact_signing_key(const void *handle, const char *name, size_t name_len);
RevaultBuffer vault_directory_list_profile_generations(const void *handle, const char *name, size_t name_len);
RevaultBuffer vault_directory_rotate_private_key(const void *handle, const char *name, size_t name_len);
bool vault_directory_remember_lockbox(const void *handle, const uint8_t *id, size_t id_len, const char *path, size_t path_len);
RevaultBuffer vault_directory_list_known_lockboxes(const void *handle);
bool vault_directory_forget_lockbox(const void *handle, const char *path, size_t path_len);
bool vault_directory_remember_access_slot_label(const void *handle, const uint8_t *id, size_t id_len, uint64_t slot_id, const char *name, size_t name_len);
RevaultBuffer vault_directory_list_access_slot_labels(const void *handle, const uint8_t *id, size_t id_len);
RevaultBuffer vault_directory_find_access_slot_labels(const void *handle, const uint8_t *id, size_t id_len, const char *name, size_t name_len);
bool vault_directory_forget_access_slot_label(const void *handle, const uint8_t *id, size_t id_len, uint64_t slot_id);
RevaultBuffer vault_directory_define_form(const void *handle, const char *alias, size_t alias_len, const char *name, size_t name_len, const char *description, size_t description_len, const uint8_t *fields_flatbuffer, size_t fields_len);
RevaultBuffer vault_directory_resolve_form(const void *handle, const char *reference, size_t reference_len);
RevaultBuffer vault_directory_list_forms(const void *handle);