bindings/java/src/com/onepub/revault/RevaultNativeApi.java

    vault_key_decode_crockford = linker.downcallHandle(symbols.find("vault_key_decode_crockford").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_hex_encode = linker.downcallHandle(symbols.find("vault_key_hex_encode").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_hex_decode = linker.downcallHandle(symbols.find("vault_key_hex_decode").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_open = linker.downcallHandle(symbols.find("vault_directory_open").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_structure_version_current = linker.downcallHandle(symbols.find("vault_structure_version_current").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_INT));
    vault_directory_probe_structure_version = linker.downcallHandle(symbols.find("vault_directory_probe_structure_version").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_open_or_create_default = linker.downcallHandle(symbols.find("vault_directory_open_or_create_default").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_replace_default = linker.downcallHandle(symbols.find("vault_directory_replace_default").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_change_password = linker.downcallHandle(symbols.find("vault_directory_change_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_change_default_password = linker.downcallHandle(symbols.find("vault_directory_change_default_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_replace = linker.downcallHandle(symbols.find("vault_directory_replace").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_open_or_create = linker.downcallHandle(symbols.find("vault_directory_open_or_create").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_root = linker.downcallHandle(symbols.find("vault_directory_root").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_structure_version = linker.downcallHandle(symbols.find("vault_directory_structure_version").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    vault_directory_list_private_keys = linker.downcallHandle(symbols.find("vault_directory_list_private_keys").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_list_private_key_names = linker.downcallHandle(symbols.find("vault_directory_list_private_key_names").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_list_contact_names = linker.downcallHandle(symbols.find("vault_directory_list_contact_names").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_list_form_aliases = linker.downcallHandle(symbols.find("vault_directory_list_form_aliases").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_private_key_exists = linker.downcallHandle(symbols.find("vault_directory_private_key_exists").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_delete_private_key = linker.downcallHandle(symbols.find("vault_directory_delete_private_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_store_private_key = linker.downcallHandle(symbols.find("vault_directory_store_private_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_directory_load_private_key = linker.downcallHandle(symbols.find("vault_directory_load_private_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_load_private_key_generation = linker.downcallHandle(symbols.find("vault_directory_load_private_key_generation").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_SHORT));
    vault_directory_store_contact = linker.downcallHandle(symbols.find("vault_directory_store_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_directory_load_contact = linker.downcallHandle(symbols.find("vault_directory_load_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_contact_exists = linker.downcallHandle(symbols.find("vault_directory_contact_exists").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_delete_contact = linker.downcallHandle(symbols.find("vault_directory_delete_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_list_contacts = linker.downcallHandle(symbols.find("vault_directory_list_contacts").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_store_profile_email = linker.downcallHandle(symbols.find("vault_directory_store_profile_email").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_profile_email = linker.downcallHandle(symbols.find("vault_directory_profile_email").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_store_backup = linker.downcallHandle(symbols.find("vault_directory_store_backup").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_load_backup = linker.downcallHandle(symbols.find("vault_directory_load_backup").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_backup_count = linker.downcallHandle(symbols.find("vault_directory_backup_count").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_directory_restore_private_key = linker.downcallHandle(symbols.find("vault_directory_restore_private_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_BOOLEAN));
    vault_directory_load_owner_signing_key = linker.downcallHandle(symbols.find("vault_directory_load_owner_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_load_owner_signing_key_generation = linker.downcallHandle(symbols.find("vault_directory_load_owner_signing_key_generation").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_SHORT));
    vault_directory_store_contact_signing_key = linker.downcallHandle(symbols.find("vault_directory_store_contact_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    vault_directory_load_contact_signing_key = linker.downcallHandle(symbols.find("vault_directory_load_contact_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_list_profile_generations = linker.downcallHandle(symbols.find("vault_directory_list_profile_generations").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_rotate_private_key = linker.downcallHandle(symbols.find("vault_directory_rotate_private_key").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_remember_lockbox = linker.downcallHandle(symbols.find("vault_directory_remember_lockbox").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_list_known_lockboxes = linker.downcallHandle(symbols.find("vault_directory_list_known_lockboxes").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_directory_forget_lockbox = linker.downcallHandle(symbols.find("vault_directory_forget_lockbox").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_remember_access_slot_label = linker.downcallHandle(symbols.find("vault_directory_remember_access_slot_label").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_list_access_slot_labels = linker.downcallHandle(symbols.find("vault_directory_list_access_slot_labels").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_find_access_slot_labels = linker.downcallHandle(symbols.find("vault_directory_find_access_slot_labels").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_forget_access_slot_label = linker.downcallHandle(symbols.find("vault_directory_forget_access_slot_label").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    vault_directory_define_form = linker.downcallHandle(symbols.find("vault_directory_define_form").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_resolve_form = linker.downcallHandle(symbols.find("vault_directory_resolve_form").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_directory_list_forms = linker.downcallHandle(symbols.find("vault_directory_list_forms").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
